--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,14 +22,19 @@ dependencies:
   shared_preferences: ^0.5.4+8
   random_color: ^1.0.3
   auto_size_text: ^2.1.0
+  geolocator: ^5.1.5
+  geocoder: ^0.2.1
+  country_pickers: ^1.1.0
 
-  # The following adds the Cupertino Icons font to your application.
+
+  # The following adds the1` Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 
 
@@ -60,6 +65,7 @@ flutter:
     - assets/a_wallet.png
     - assets/a_tools.png
     - assets/filters.png
+    - assets/profile_pic.jpg
 
 
 
